# MalDec-EDR

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md
config/: appsettings.development.json  appsettings.json
config/daemon/: maldec-edr.service
config/deamon/: linuxdefender.service
documentation/: README.md
include/: yr_ignore_dirs.h  yr_inspector.h
include/cjson/: cjson.h
include/compiler/: compiler_attribute.h
include/compression/: config.h  zlib.h
include/err/: err.h  ptr_err.h
include/inotify/: config.h  inotify.h  paths.h
include/inspector/: config.h  inspector.h
include/logger/: config.h  logger.h
include/memory/: config.h  memory.h
include/scan/: config.h  ignored_dirs.h  scan.h  skip_dirs.h
include/version/: version.h
inspector/: .inspector_db.sqlite3
inspector/.quarantine/: batata
scripts/: build.sh  clang-format.sh  cppcheck.sh
scripts/doxygen/: customdoxygen.css  customfooter.html  customheader.html  doxygen.sh
scripts/tracing/: ptrace.py  regs.py  statistical.py  syscall_table.py  user-tracing.py  user_tracing.py
sources/: CMakeLists.txt  main.c
sources/cjson/: cjson.c  cjson.h
sources/cli/: CMakeLists.txt  config.h  main.c  maldec-edr-cli.c
sources/cli/defender/: defender.c  defender.h
sources/compression/: zlib.c
sources/crowarmor/: config.h  crowarmor.c  crowarmor.h
sources/daemon/: CMakeLists.txt  bus_methods.c  bus_methods.h  main.c  maldec-edr-daemon.c
sources/daemon/bus-ifc/: bus-ifc.c  bus-ifc.h
sources/daemon/sig-hdlr/: handler.c  handler.h
sources/deamon/: CMakeLists.txt
sources/defender/: config.h  defender.c  defender.h  init_cjson.c  init_inotify.c  init_logger.c  init_scanner.c  init_telekinesis.c
sources/defenderd/bus-ifc/: bus-ifc.h
sources/defenderd/sig-hdlr/: handler.h
sources/edr/: config.h  edr.c  edr.h
sources/gui/: CMakeLists.txt  main.c  main.cpp  mainwindow.cpp  mainwindow.h
sources/gui/ui/: mainwindow.ui
sources/inotify/: config.h  inotify.c  inotify.h  paths.c
sources/inspector/: inspector.c  quarantine.c  quarantine_db.c  quarantine_default.c
sources/logger/: logger.c
sources/memory/: memory.c
sources/modules/: modules.c
sources/scan/: config.h  ignored_dirs.c  scan.c  scan.h  scan_default.c  scanner.c  skip_dirs.c  skip_dirs.h
sources/scanner/: config.h  scan.c  scan_default.c  scanner.c  scanner.h
sources/telekinesis/: config.h  telekinesis.c  telekinesis.h
sources/yara/: yr_inspector.c  yr_scan.c  yt_ignore_dirs.c
tests/: CMakeLists.txt  Simple.c  inotify_test.c  inspector_test.c  json_parser_config_test.c  scanner_test.c  testlog.txt  yara_scanner_test.c  yara_test.c
tests/yara/: CMakeLists.txt  YaraTest.c
